UI Changes and Links

--- a/braine/index.html
+++ b/braine/index.html
@@ -36,8 +36,8 @@
   <body>
     <div class="page-wrapper">
       <!-- Cursor -->
-      <div class="cursor"></div>
-      <div class="cursor-follower"></div>
+      <!-- <div class="cursor"></div>
+      <div class="cursor-follower"></div> -->
       <!-- Cursor End -->
 
       <!-- Preloader -->
@@ -444,7 +444,7 @@
                   <i class="icon-speaker1"></i>
                 </div>
                 <h5 class="service-block_one-heading">
-                  <a href="service-detail.html">MARCO – Talk to your Data</a>
+                  <a href="./macro.html">MARCO – Talk to your Data</a>
                 </h5>
                 <div class="service-block_one-text">
                   Ask MARCO anything about your marketing data across channels
@@ -455,7 +455,7 @@
                   class="lower-box d-flex justify-content-between align-items-center flex-wrap"
                 >
                   <div class="service-block_one-number">01</div>
-                  <a class="service-block_one-join" href="service-detail.html"
+                  <a class="service-block_one-join" href="./macro.html"
                     >Read More <i class="fa-solid fa-plus fa-fw"></i
                   ></a>
                 </div>
@@ -473,7 +473,9 @@
                   <i class="icon-marketing"></i>
                 </div>
                 <h5 class="service-block_one-heading">
-                  <a href="service-detail.html">Social Creative Studio</a>
+                  <a href="./social-creative-studio.html"
+                    >Social Creative Studio</a
+                  >
                 </h5>
                 <div class="service-block_one-text">
                   Enhances social media strategy with Gen AI content,
@@ -485,7 +487,9 @@
                   class="lower-box d-flex justify-content-between align-items-center flex-wrap"
                 >
                   <div class="service-block_one-number">02</div>
-                  <a class="service-block_one-join" href="service-detail.html"
+                  <a
+                    class="service-block_one-join"
+                    href="./social-creative-studio.html"
                     >Read More <i class="fa-solid fa-plus fa-fw"></i
                   ></a>
                 </div>
@@ -503,7 +507,7 @@
                   <i class="icon-users"></i>
                 </div>
                 <h5 class="service-block_one-heading">
-                  <a href="service-detail.html">Nexus Omni Dash</a>
+                  <a href="./nexus-omni-dash.html">Nexus Omni Dash</a>
                 </h5>
                 <div class="service-block_one-text">
                   Consolidate data from your ad platforms, social media
@@ -514,7 +518,9 @@
                   class="lower-box d-flex justify-content-between align-items-center flex-wrap"
                 >
                   <div class="service-block_one-number">03</div>
-                  <a class="service-block_one-join" href="service-detail.html"
+                  <a
+                    class="service-block_one-join"
+                    href="./nexus-omni-dash.html"
                     >Read More <i class="fa-solid fa-plus fa-fw"></i
                   ></a>
                 </div>
@@ -543,7 +549,7 @@
                   class="lower-box d-flex justify-content-between align-items-center flex-wrap d-none"
                 >
                   <div class="service-block_one-number">04</div>
-                  <a class="service-block_one-join" href="service-detail.html"
+                  <a class="service-block_one-join" href=""
                     >Read More <i class="fa-solid fa-plus fa-fw"></i
                   ></a>
                 </div>
@@ -572,7 +578,7 @@
                   class="lower-box d-flex justify-content-between align-items-center flex-wrap d-none"
                 >
                   <div class="service-block_one-number">05</div>
-                  <a class="service-block_one-join" href="service-detail.html"
+                  <a class="service-block_one-join" href=""
                     >Read More <i class="fa-solid fa-plus fa-fw"></i
                   ></a>
                 </div>
@@ -600,7 +606,7 @@
                   class="lower-box d-flex justify-content-between align-items-center flex-wrap d-none"
                 >
                   <div class="service-block_one-number">05</div>
-                  <a class="service-block_one-join" href="service-detail.html"
+                  <a class="service-block_one-join" href=""
                     >Read More <i class="fa-solid fa-plus fa-fw"></i
                   ></a>
                 </div>
