--- a/braine/nexus-omni-dash.html
+++ b/braine/nexus-omni-dash.html
@@ -452,14 +452,14 @@
                 Data problem
               </h2>
             </div>
-            <div class="steps-one_button">
+            <!-- <div class="steps-one_button">
               <a href="about.html" class="template-btn btn-style-two">
                 <span class="btn-wrap">
                   <span class="text-one"></span>
                   <span class="text-two"></span>
                 </span>
               </a>
-            </div>
+            </div> -->
             <div class="row clearfix">
               <!-- Column -->
               <div class="column col-lg-6 col-md-12 col-sm-12">
@@ -820,16 +820,16 @@
               class="d-flex align-items-center flex-wrap justify-content-between"
             >
               <div class="new-post">
-                <a href="#"
+                <a href="./social-creative-studio.html"
                   ><i class="fa-solid fa-angle-left fa-fw"></i> Previous</a
                 >
                 <h4>Social Creative Studio</h4>
               </div>
               <div class="new-post text-right">
-                <a href="#"
+                <a href="./macro.html"
                   >next <i class="fa-solid fa-angle-right fa-fw"></i
                 ></a>
-                <h4>Pulse Insights</h4>
+                <h4>MARCO - Talk to your Data</h4>
               </div>
             </div>
           </div>
