--- a/braine/index-2.html
+++ b/braine/index-2.html
@@ -116,61 +116,26 @@
                       id="navbarSupportedContent"
                     >
                       <ul class="navigation clearfix">
-                        <li class="dropdown">
-                          <a href="#">Home</a>
-                          <ul>
-                            <li><a href="index.html">HomePage 01</a></li>
-                            <li><a href="index-2.html">HomePage 02</a></li>
-                            <li><a href="index-3.html">HomePage 03</a></li>
-                            <li class="dropdown">
-                              <a href="#">Header Style</a>
-                              <ul>
-                                <li><a href="index.html">Header 01</a></li>
-                                <li><a href="index-2.html">Header 02</a></li>
-                                <li><a href="index-3.html">Header 03</a></li>
-                              </ul>
-                            </li>
-                          </ul>
-                        </li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="about.html">About</a></li>
-                        <li class="dropdown">
-                          <a href="#">Pages</a>
-                          <ul>
-                            <li><a href="faq.html">Faq</a></li>
-                            <li><a href="pricing.html">Price</a></li>
-                            <li><a href="testimonial.html">Testimonial</a></li>
-                            <li><a href="login.html">Login</a></li>
-                            <li><a href="register.html">Register</a></li>
-                            <li><a href="reset.html">Forgot password</a></li>
-                            <li class="dropdown">
-                              <a href="#">Team</a>
-                              <ul>
-                                <li><a href="team.html">Team</a></li>
-                                <li>
-                                  <a href="team-detail.html">Team detail</a>
-                                </li>
-                              </ul>
-                            </li>
-                          </ul>
-                        </li>
                         <li class="dropdown">
                           <a href="#">Services</a>
                           <ul>
-                            <li><a href="services.html">Services</a></li>
                             <li>
-                              <a href="service-detail.html">Services detail</a>
+                              <a href="./macro.html"
+                                >MARCO – Talk to your Data</a
+                              >
                             </li>
-                          </ul>
-                        </li>
-                        <li class="dropdown">
-                          <a href="#">Blog</a>
-                          <ul>
-                            <li><a href="blog.html">Blog grid</a></li>
                             <li>
-                              <a href="blog-classic.html">Blog classic</a>
+                              <a href="./social-creative-studio.html"
+                                >Social Creative Studio</a
+                              >
                             </li>
-                            <li><a href="news-detail.html">Blog detail</a></li>
-                            <li><a href="not-found.html">Not found</a></li>
+                            <li>
+                              <a href="./nexus-omni-dash.html"
+                                >Nexus Omni Dash</a
+                              >
+                            </li>
                           </ul>
                         </li>
                         <li><a href="contact.html">Contact</a></li>
@@ -1958,8 +1923,7 @@
           <div class="auto-container">
             <div class="inner-container d-flex justify-content-center">
               <div class="footer-copyright">
-                &copy; 2024 <a href="index.html">Braine.</a> All rights
-                reserved.
+                &copy; 2024 Keinsa Private Limited. All Rights Reserved.
               </div>
             </div>
           </div>
