Social Icons Links

--- a/braine/nexus-omni-dash.html
+++ b/braine/nexus-omni-dash.html
@@ -965,17 +965,10 @@
               </div>
               <!-- Social Box -->
               <div class="footer-social_box">
-                <a href="https://facebook.com/"
-                  ><i class="fa-brands fa-facebook-f"></i
-                ></a>
-                <a href="https://twitter.com/"
-                  ><i class="fa-brands fa-twitter"></i
-                ></a>
-                <a href="https://youtube.com/"
-                  ><i class="fa-brands fa-youtube"></i
-                ></a>
-                <a href="https://instagram.com/"
-                  ><i class="fa-brands fa-instagram"></i
+                <a
+                  href="https://www.linkedin.com/company/flable/"
+                  target="_blank"
+                  ><i class="fa-brands fa-linkedin"></i
                 ></a>
               </div>
             </div>
