--- a/braine/contact.html
+++ b/braine/contact.html
@@ -357,7 +357,9 @@
               </div>
               <!-- Social Box -->
               <div class="contact-social_box">
-                <a href="https://www.linkedin.com/company/flable/"
+                <a
+                  href="https://www.linkedin.com/company/flable/"
+                  target="_blank"
                   ><i class="fa-brands fa-linkedin"></i
                 ></a>
               </div>
