Contact form Fix

--- a/braine/contact.html
+++ b/braine/contact.html
@@ -367,12 +367,14 @@
             <!-- Column -->
             <div class="column col-lg-6 col-md-12 col-sm-12">
               <!--  -->
-              <h2 class="sec-title_title">Embed Klavyio Here</h2>
-              <div class="klaviyo-form-U7P7Sk"></div>
 
-              <!-- Example: Paste the Klaviyo form embed code here -->
+              <script
+                type="text/javascript"
+                async=""
+                src="https://static.klaviyo.com/onsite/js/klaviyo.js?company_id=TNfqEf"
+              ></script>
+
               <div id="klaviyo-form-container">
-                <!-- Klaviyo Form Embed Code -->
                 <script
                   type="text/javascript"
                   src="https://www.klaviyo.com/embed/U7P7Sk.js"
