--- a/braine/social-creative-studio.html
+++ b/braine/social-creative-studio.html
@@ -441,7 +441,7 @@
                     </div>
                     <div class="step-block_one-content">
                       <div class="image">
-                        <img src="assets/images/resource/step-1.png" alt="" />
+                        <img src="assets/images/creative-studio/Calendar-white.png" alt="" />
                       </div>
                     </div>
                   </div>
@@ -478,7 +478,7 @@
                     </div>
                     <div class="step-block_one-content">
                       <div class="image">
-                        <img src="assets/images/resource/step-3.png" alt="" />
+                        <img src="assets/images/creative-studio/creative-teardown.png" alt="" />
                       </div>
                     </div>
                   </div>
@@ -556,12 +556,12 @@
             <div class="column col-lg-6 col-md-6 col-sm-12">
               <div class="service-detail_image-two">
                 <a
-                  href="https://www.youtube.com/watch?v=kxPCFljwJws"
+                  href="assets/images/creative-studio/creativestudiovideo.mp4"
                   class="lightbox-video service-detail_play"
                   ><span class="fa-solid fa-play fa-fw"
                     ><i class="ripple"></i></span
                 ></a>
-                <img src="assets/images/resource/service-detail-2.jpg" alt="" />
+                <img src="assets/images/creative-studio/creative-teardown.png" alt="" />
               </div>
             </div>
           </div>
