--- a/braine/macro.html
+++ b/braine/macro.html
@@ -437,7 +437,7 @@
                     </div>
                     <div class="step-block_one-content">
                       <div class="image">
-                        <img src="assets/images/resource/step-1.png" alt="" />
+                        <img src="assets/images/macro-services/Marco_-web-analytics-1.png" alt="" />
                       </div>
                     </div>
                   </div>
@@ -457,7 +457,7 @@
 
                     <div class="step-block_one-content">
                       <div class="image">
-                        <img src="assets/images/resource/step-2.png" alt="" />
+                        <img src="assets/images/macro-services/Marco-ad-analytics.png" alt="" />
                       </div>
                     </div>
                   </div>
@@ -473,7 +473,7 @@
                     </div>
                     <div class="step-block_one-content">
                       <div class="image">
-                        <img src="assets/images/resource/step-3.png" alt="" />
+                        <img src="assets/images/macro-services/store-analytics-1.png" alt="" />
                       </div>
                     </div>
                   </div>
@@ -539,18 +539,18 @@
           <div class="row clearfix">
             <div class="column col-lg-6 col-md-6 col-sm-12">
               <div class="service-detail_image-two">
-                <img src="assets/images/resource/service-detail-1.jpg" alt="" />
+                <img src="assets/images/macro-services/Marco-Store-analytics.png" alt="" />
               </div>
             </div>
             <div class="column col-lg-6 col-md-6 col-sm-12">
               <div class="service-detail_image-two">
                 <a
-                  href="https://www.youtube.com/watch?v=kxPCFljwJws"
+                  href="assets/images/macro-services/marco2.mp4"
                   class="lightbox-video service-detail_play"
                   ><span class="fa-solid fa-play fa-fw"
                     ><i class="ripple"></i></span
                 ></a>
-                <img src="assets/images/resource/service-detail-2.jpg" alt="" />
+                <img src="assets/images/macro-services/videothumbanial.png" alt="" />
               </div>
             </div>
           </div>
