Slider and Anchor redirect Fix

--- a/braine/index.html
+++ b/braine/index.html
@@ -505,7 +505,7 @@
                   <i class="icon-copyright"></i>
                 </div>
                 <h5 class="service-block_one-heading">
-                  <a href>Pulse Insights</a>
+                  <a href="/" onclick="return false;">Pulse Insights</a>
                 </h5>
                 <div class="service-block_one-text">
                   Pulse Insights leverages advanced AI algorithms to deliver
@@ -534,7 +534,7 @@
                   <i class="icon-tag"></i>
                 </div>
                 <h5 class="service-block_one-heading">
-                  <a href>Journey Tracker</a>
+                  <a href="/" onclick="return false;">Journey Tracker</a>
                 </h5>
                 <div class="service-block_one-text">
                   A single source of truth for your ad attribution data,
@@ -562,7 +562,7 @@
                   <i class="icon-tag"></i>
                 </div>
                 <h5 class="service-block_one-heading">
-                  <a href>NextGen Connector</a>
+                  <a href="/" onclick="return false;">NextGen Connector</a>
                 </h5>
                 <div class="service-block_one-text">
                   Effortlessly integrate and set-up your ads manager, social
@@ -972,6 +972,7 @@
                 <span>clients says</span>
               </h2>
             </div>
+
             <div class="three-item_carousel swiper-container">
               <div class="swiper-wrapper">
                 <!-- Slide -->
