Pricing Link Add

--- a/braine/nexus-omni-dash.html
+++ b/braine/nexus-omni-dash.html
@@ -126,6 +126,7 @@
                             </li>
                           </ul>
                         </li>
+                        <li><a href="pricing.html">Pricing</a></li>
                         <li><a href="contact.html">Contact</a></li>
                       </ul>
                     </div>
@@ -476,7 +477,10 @@
                     </div>
                     <div class="step-block_one-content">
                       <div class="image">
-                        <img src="assets/images/nexus/dataunificationfullwhite.png" alt="" />
+                        <img
+                          src="assets/images/nexus/dataunificationfullwhite.png"
+                          alt=""
+                        />
                       </div>
                     </div>
                   </div>
@@ -493,7 +497,10 @@
                     </div>
                     <div class="step-block_one-content">
                       <div class="image">
-                        <img src="assets/images/nexus/ad-analytics.png" alt="" />
+                        <img
+                          src="assets/images/nexus/ad-analytics.png"
+                          alt=""
+                        />
                       </div>
                     </div>
                   </div>
