--- a/braine/macro.html
+++ b/braine/macro.html
@@ -126,6 +126,7 @@
                             </li>
                           </ul>
                         </li>
+                        <li><a href="pricing.html">Pricing</a></li>
                         <li><a href="contact.html">Contact</a></li>
                       </ul>
                     </div>
@@ -437,7 +438,10 @@
                     </div>
                     <div class="step-block_one-content">
                       <div class="image">
-                        <img src="assets/images/macro-services/Marco_-web-analytics-1.png" alt="" />
+                        <img
+                          src="assets/images/macro-services/Marco_-web-analytics-1.png"
+                          alt=""
+                        />
                       </div>
                     </div>
                   </div>
@@ -457,7 +461,10 @@
 
                     <div class="step-block_one-content">
                       <div class="image">
-                        <img src="assets/images/macro-services/Marco-ad-analytics.png" alt="" />
+                        <img
+                          src="assets/images/macro-services/Marco-ad-analytics.png"
+                          alt=""
+                        />
                       </div>
                     </div>
                   </div>
@@ -473,7 +480,10 @@
                     </div>
                     <div class="step-block_one-content">
                       <div class="image">
-                        <img src="assets/images/macro-services/store-analytics-1.png" alt="" />
+                        <img
+                          src="assets/images/macro-services/store-analytics-1.png"
+                          alt=""
+                        />
                       </div>
                     </div>
                   </div>
@@ -539,7 +549,10 @@
           <div class="row clearfix">
             <div class="column col-lg-6 col-md-6 col-sm-12">
               <div class="service-detail_image-two">
-                <img src="assets/images/macro-services/Marco-Store-analytics.png" alt="" />
+                <img
+                  src="assets/images/macro-services/Marco-Store-analytics.png"
+                  alt=""
+                />
               </div>
             </div>
             <div class="column col-lg-6 col-md-6 col-sm-12">
@@ -550,7 +563,10 @@
                   ><span class="fa-solid fa-play fa-fw"
                     ><i class="ripple"></i></span
                 ></a>
-                <img src="assets/images/macro-services/videothumbanial.png" alt="" />
+                <img
+                  src="assets/images/macro-services/videothumbanial.png"
+                  alt=""
+                />
               </div>
             </div>
           </div>
