--- a/braine/reset.html
+++ b/braine/reset.html
@@ -126,6 +126,7 @@
                             </li>
                           </ul>
                         </li>
+                        <li><a href="pricing.html">Pricing</a></li>
                         <li><a href="contact.html">Contact</a></li>
                       </ul>
                     </div>
