--- a/braine/social-creative-studio.html
+++ b/braine/social-creative-studio.html
@@ -126,6 +126,7 @@
                             </li>
                           </ul>
                         </li>
+                        <li><a href="pricing.html">Pricing</a></li>
                         <li><a href="contact.html">Contact</a></li>
                       </ul>
                     </div>
@@ -441,7 +442,10 @@
                     </div>
                     <div class="step-block_one-content">
                       <div class="image">
-                        <img src="assets/images/creative-studio/Calendar-white.png" alt="" />
+                        <img
+                          src="assets/images/creative-studio/Calendar-white.png"
+                          alt=""
+                        />
                       </div>
                     </div>
                   </div>
@@ -478,7 +482,10 @@
                     </div>
                     <div class="step-block_one-content">
                       <div class="image">
-                        <img src="assets/images/creative-studio/creative-teardown.png" alt="" />
+                        <img
+                          src="assets/images/creative-studio/creative-teardown.png"
+                          alt=""
+                        />
                       </div>
                     </div>
                   </div>
@@ -561,7 +568,10 @@
                   ><span class="fa-solid fa-play fa-fw"
                     ><i class="ripple"></i></span
                 ></a>
-                <img src="assets/images/creative-studio/creative-teardown.png" alt="" />
+                <img
+                  src="assets/images/creative-studio/creative-teardown.png"
+                  alt=""
+                />
               </div>
             </div>
           </div>
