Pulse Insights Page Add

--- a/braine/contact.html
+++ b/braine/contact.html
@@ -122,6 +122,9 @@
                                 >Nexus Omni Dash</a
                               >
                             </li>
+                            <li>
+                              <a href="./pulse-insights.html">Pulse Insights</a>
+                            </li>
                           </ul>
                         </li>
                         <li>
