--- a/braine/macro.html
+++ b/braine/macro.html
@@ -124,6 +124,9 @@
                                 >Nexus Omni Dash</a
                               >
                             </li>
+                            <li>
+                              <a href="./pulse-insights.html">Pulse Insights</a>
+                            </li>
                           </ul>
                         </li>
                         <li><a href="pricing.html">Pricing</a></li>
