--- a/braine/nexus-omni-dash.html
+++ b/braine/nexus-omni-dash.html
@@ -124,6 +124,9 @@
                                 >Nexus Omni Dash</a
                               >
                             </li>
+                            <li>
+                              <a href="./pulse-insights.html">Pulse Insights</a>
+                            </li>
                           </ul>
                         </li>
                         <li><a href="pricing.html">Pricing</a></li>
@@ -798,10 +801,10 @@
                 <h4>Social Creative Studio</h4>
               </div>
               <div class="new-post text-right">
-                <a href="./macro.html"
+                <a href="./pulse-insights.html"
                   >next <i class="fa-solid fa-angle-right fa-fw"></i
                 ></a>
-                <h4>MARCO - Talk to your Data</h4>
+                <h4>Pulse Insights</h4>
               </div>
             </div>
           </div>
