--- a/braine/index-2.html
+++ b/braine/index-2.html
@@ -136,6 +136,9 @@
                                 >Nexus Omni Dash</a
                               >
                             </li>
+                            <li>
+                              <a href="./pulse-insights.html">Pulse Insights</a>
+                            </li>
                           </ul>
                         </li>
                         <li><a href="pricing.html">Pricing</a></li>
