Pulse Page Content + Pricing

--- a/braine/pulse-insights.html
+++ b/braine/pulse-insights.html
@@ -300,22 +300,16 @@
               class="d-flex justify-content-between align-items-center flex-wrap"
             >
               <div class="left-box">
-                <div class="sec-title_title">Dashboard</div>
+                <div class="sec-title_title">The D2C problem </div>
                 <h2 class="sec-title_heading">
-                  View all your marketing metrics at a glance
+                  Making sense of your ad and website data
                 </h2>
               </div>
               <div class="right-box">
                 <p>
-                  Flable's all-in-one dashboard consolidates metrics from ad,
-                  social, and e-commerce platforms, enabling efficient data
-                  analytics and strategic decision-making. The dashboard is easy
-                  to set up, delivering deep insights on over 700 variables
-                  within 24 hours of installation.
-                  <br /><br />
-                  Customize your dashboard to view the metrics that matter most
-                  to your business, and easily identify primary factors
-                  influencing key variables like CAC and CTR.
+                  D2C teams face the challenge of correctly interpreting ad campaign and website data to optimize performance and drive growth. 
+                  <br/><br/>
+                  This task requires an experienced and specialized insights manager to collate, analyze, and correlate siloed data to provide actionable insights to the marketing team. However, hiring such expertise can be expensive.
                 </p>
               </div>
             </div>
@@ -418,10 +412,9 @@
 
             <!-- Sec Title -->
             <div class="sec-title">
-              <div class="sec-title_title d-none">How Its work</div>
+              <div class="sec-title_title">XI Powered Pulse Insights</div>
               <h2 class="sec-title_heading">
-                How we solve the D2C <br />
-                Data problem
+                Valuable, time-saving web <br/> and ad insights
               </h2>
             </div>
             <!-- <div class="steps-one_button">
@@ -440,11 +433,10 @@
                   <div class="step-block_one-inner">
                     <div class="step-block_one-steps">XI Engine</div>
                     <h5 class="step-block_one-title">
-                      Webstore & Marketplace Analytics
+                      Multi-level ad insights
                     </h5>
                     <div class="step-block_one-text">
-                      Monitor important web store metrics like COGS, purchases,
-                      revenue, net profits and much more
+                      Gives you 6 key performance metrics at the ad, ad set, and campaign level. 
                     </div>
                     <div class="step-block_one-content">
                       <div class="image">
@@ -456,11 +448,9 @@
                 <div class="step-block_one">
                   <div class="step-block_one-inner">
                     <div class="step-block_one-steps">XI Engine</div>
-                    <h5 class="step-block_one-title">Website Analytics</h5>
+                    <h5 class="step-block_one-title">Correlations and Recommendations</h5>
                     <div class="step-block_one-text">
-                      Get graphical and summarised insights on user behavior
-                      like session duration, events, conversion, traffic
-                      acquisition and more
+                      Our ML algorithms compare current ad performance to past campaigns, compare key KPI metrics, and provide improvement recommendations.
                     </div>
                     <div class="step-block_one-content">
                       <div class="image">
@@ -476,10 +466,9 @@
                 <div class="step-block_one">
                   <div class="step-block_one-inner">
                     <div class="step-block_one-steps">XI Engine</div>
-                    <h5 class="step-block_one-title">Data Unification</h5>
+                    <h5 class="step-block_one-title">Deep Web Traffic Insights</h5>
                     <div class="step-block_one-text">
-                      Connect your website, ad platforms, social media, and
-                      e-commerce marketplaces in one place
+                      Track user origins, regional traffic, and access devices to optimize your marketing strategy with detailed behavioral insights.
                     </div>
                     <div class="step-block_one-content">
                       <div class="image">
@@ -496,10 +485,9 @@
                 <div class="step-block_one">
                   <div class="step-block_one-inner">
                     <div class="step-block_one-steps">XI Engine</div>
-                    <h5 class="step-block_one-title">Ad Analytics</h5>
+                    <h5 class="step-block_one-title">Co relate website events and outcomes</h5>
                     <div class="step-block_one-text">
-                      Track the performance of your digital ads on the campaign
-                      level, ad set level, and ad level
+                      Our AI reveals key correlations in user behavior and KPI outcomes, helping you identify product preferences, frequently bought items, and more for data-driven audience targeting and stock management.
                     </div>
                     <div class="step-block_one-content">
                       <div class="image">
@@ -527,9 +515,9 @@
               class="d-flex justify-content-between align-items-center flex-wrap"
             >
               <div class="left-box">
-                <div class="sec-title_title">problem & solutions</div>
+                <div class="sec-title_title">XI Powered Pulse Insights</div>
                 <h2 class="sec-title_heading">
-                  Comprehensively covers all your business needs
+                  360° Ad & Website Insights
                 </h2>
               </div>
               <div class="right-box">
@@ -542,42 +530,37 @@
                 </p>
                 <ul class="solution-one_list">
                   <li>
-                    <i class="fa-solid fa-check fa-fw"></i>360-degree business
-                    view with consolidated metrics from Meta ads, Google ads,
-                    e-commerce, and lead-generation websites.
+                    <i class="fa-solid fa-check fa-fw"></i>AI-driven web and ad analysis by Flable’s XI engine
                   </li>
                   <li>
-                    <i class="fa-solid fa-check fa-fw"></i>Integrates with
-                    e-commerce marketplace platforms like Amazon Seller Central.
+                    <i class="fa-solid fa-check fa-fw"></i>
+                    Insights akin to expert insights manager and data scientist
+                    
                   </li>
                   <li>
-                    <i class="fa-solid fa-check fa-fw"></i>Customizable
-                    dashboard to track key variables over time.
+                    <i class="fa-solid fa-check fa-fw"></i>Optimizes funnel flow and enhances visitor understanding.
                   </li>
                   <li>
-                    <i class="fa-solid fa-check fa-fw"></i>Provides you with the
-                    most critical insights in the form of graphs and texts
+                    <i class="fa-solid fa-check fa-fw"></i>Develops actionable marketing strategies based on data insights.
                   </li>
                   <li>
-                    <i class="fa-solid fa-check fa-fw"></i>XI engine identifies
-                    the top reasons for high CAC or low CTR in Meta and Google
+                    <i class="fa-solid fa-check fa-fw"></i>Drives business growth through informed decision-making.
                     ads.
                   </li>
                   <li>
-                    <i class="fa-solid fa-check fa-fw"></i>Analyzes over 700
-                    variables across channels to find data correlations.
+                    <i class="fa-solid fa-check fa-fw"></i>Delivers critical insights at campaign, ad set, and individual ad levels.
                   </li>
                   <li>
                     <i class="fa-solid fa-check fa-fw"></i>
-                    Delivers deep insights beyond human capabilities
+                    Analyzes ad data from Meta Ads, Google Ads, Bing Ads, and more.
                   </li>
                   <li>
                     <i class="fa-solid fa-check fa-fw"></i>
-                    Simplifies data analytics for your team.
+                    Processes over 600 ad metrics in real-time using complex algorithms.
                   </li>
                   <li>
                     <i class="fa-solid fa-check fa-fw"></i>
-                    Uncovers data correlations and trends.
+                    Identifies anomalies, optimal target audiences, regions, ad placements, and devices.
                   </li>
                 </ul>
               </div>
