Mobile UI Changes

--- a/braine/pricing.html
+++ b/braine/pricing.html
@@ -1084,7 +1084,7 @@
       <!-- End Clients Two -->
 
       <!-- CTA One -->
-      <section class="cta-one style-two">
+      <section class="cta-one style-two d-none">
         <div
           class="cta-one_shadow"
           style="background-image: url(assets/images/background/cta-shadow.png)"
@@ -1135,6 +1135,138 @@
         </div>
       </section>
       <!-- End CTA One -->
+
+      <!-- Social One -->
+      <section class="social-one">
+        <div
+          class="social-one_bg-shadow"
+          style="background-image: url(assets/images/background/social-bg.png)"
+        ></div>
+        <div class="auto-container">
+          <!-- Sec Title -->
+          <div class="sec-title centered">
+            <div class="sec-title_title">Integrations</div>
+            <h2 class="sec-title_heading">
+              <span>Unify</span> all your <span>marketing channels</span> under
+              one roof
+            </h2>
+          </div>
+          <div class="social-one_logo">
+            <span
+              ><img src="assets/images/icons/social-logo.png" alt=""
+            /></span>
+          </div>
+          <div class="inner-container">
+            <div
+              class="social-one_bg"
+              style="
+                background-image: url(assets/images/background/social-one_pattern.png);
+              "
+            ></div>
+            <div
+              class="social-one_bg-two"
+              style="
+                background-image: url(assets/images/background/social-one_pattern-two.png);
+              "
+            ></div>
+
+            <div class="social-box_one">
+              <div class="animation_mode">
+                <!-- Icon -->
+                <div class="social_icon-box">
+                  <a href="#">
+                    <img src="assets/images/icons/social-1.png" alt="" />
+                  </a>
+                </div>
+                <!-- Icon -->
+                <div class="social_icon-box">
+                  <a href="#">
+                    <img src="assets/images/icons/social-2.png" alt="" />
+                  </a>
+                </div>
+                <!-- Icon -->
+                <div class="social_icon-box">
+                  <a href="#">
+                    <img src="assets/images/icons/social-3.png" alt="" />
+                  </a>
+                </div>
+                <!-- Icon -->
+                <div class="social_icon-box">
+                  <a href="#">
+                    <img src="assets/images/icons/social-4.png" alt="" />
+                  </a>
+                </div>
+                <!-- Icon -->
+                <div class="social_icon-box">
+                  <a href="#">
+                    <img src="assets/images/icons/social-5.png" alt="" />
+                  </a>
+                </div>
+                <!-- Icon -->
+                <div class="social_icon-box">
+                  <a href="#">
+                    <img src="assets/images/icons/social-6.png" alt="" />
+                  </a>
+                </div>
+                <!-- Icon -->
+                <div class="social_icon-box">
+                  <a href="#">
+                    <img src="assets/images/icons/social-7.png" alt="" />
+                  </a>
+                </div>
+              </div>
+            </div>
+
+            <div class="social-box">
+              <div class="animation_mode_two">
+                <!-- Icon -->
+                <div class="social_icon-box">
+                  <a href="#">
+                    <img src="assets/images/icons/social-8.png" alt="" />
+                  </a>
+                </div>
+                <!-- Icon -->
+                <div class="social_icon-box">
+                  <a href="#">
+                    <img src="assets/images/icons/social-9.png" alt="" />
+                  </a>
+                </div>
+                <!-- Icon -->
+                <div class="social_icon-box">
+                  <a href="#">
+                    <img src="assets/images/icons/social-10.png" alt="" />
+                  </a>
+                </div>
+                <!-- Icon -->
+                <div class="social_icon-box">
+                  <a href="#">
+                    <img src="assets/images/icons/social-11.png" alt="" />
+                  </a>
+                </div>
+                <!-- Icon -->
+                <div class="social_icon-box">
+                  <a href="#">
+                    <img src="assets/images/icons/social-12.png" alt="" />
+                  </a>
+                </div>
+                <!-- Icon -->
+                <div class="social_icon-box">
+                  <a href="#">
+                    <img src="assets/images/icons/social-13.png" alt="" />
+                  </a>
+                </div>
+                <!-- Icon -->
+                <div class="social_icon-box">
+                  <a href="#">
+                    <img src="assets/images/icons/social-14.png" alt="" />
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- End Social One -->
 
       <!-- Main Footer -->
       <footer class="main-footer">
