Added Pulse Insights Link on Home

--- a/braine/index.html
+++ b/braine/index.html
@@ -509,7 +509,9 @@
                   <i class="icon-copyright"></i>
                 </div>
                 <h5 class="service-block_one-heading">
-                  <a href="/" onclick="return false;">Pulse Insights</a>
+                  <a href="./pulse-insights.html" onclick="return false;"
+                    >Pulse Insights</a
+                  >
                 </h5>
                 <div class="service-block_one-text">
                   Pulse Insights leverages advanced AI algorithms to deliver
@@ -517,10 +519,10 @@
                   your ads or website data, providing in-depth…
                 </div>
                 <div
-                  class="lower-box d-flex justify-content-between align-items-center flex-wrap d-none"
+                  class="lower-box d-flex justify-content-between align-items-center flex-wrap"
                 >
                   <div class="service-block_one-number">04</div>
-                  <a class="service-block_one-join" href=""
+                  <a class="service-block_one-join" href="./pulse-insights.html"
                     >Read More <i class="fa-solid fa-plus fa-fw"></i
                   ></a>
                 </div>
